--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 					
 					<div class=" card card-tile text-center">
 						<img class="img-common img-med" src="images/medical.png">
-						<h4>Medical Bill App</h4>
+						<a href="medical_app.html" target="_blank" style="font-size: 0.9em;">Medical Bill App</a>
 					</div>
 
 					<div class=" card card-tile text-center">
