Updated IT Calc link
Added functionality of IT calculator

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
 	<title>Site Name | Portal</title>
 	<meta name="viewport" content="width=device-width, initial-scale = 1.0">
+	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/utilities.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
 
-	<script type="text/javascript" src="main.js"></script>
+	<!-- <script type="text/javascript" src="main.js"></script> -->
 
 </head>
 <body>
@@ -149,7 +150,7 @@
 					
 					<div class=" card card-tile text-center">
 						<img class="img-common img-med" src="images/medical.png">
-						<h4>Medical Bill App</h4>
+						<a href="medical_app.html" target="_blank" style="font-size: 0.9em;">Medical Bill App</a> 
 					</div>
 
 					<div class=" card card-tile text-center">
@@ -159,12 +160,13 @@
 
 					<div class=" card card-tile text-center">
 						<img class="img-common" src="images/paymatrix.png">
+
 						<h4>Pay Matrix</h4>
 					</div>
 
 					<div class=" card card-tile text-center">
 						<img class="img-common" src="images/tax.png">
-						<h4>Income Tax Calc</h4>
+						<a href="IT_Calc/IT_calc.html" target="_blank" style="font-size: 0.9em;">Income Tax Calc</a> 
 					</div>
 
 					<div class=" card card-tile text-center">
@@ -193,7 +195,8 @@
 			
 		</div>
 
-	</div>
+	</div> 
+	<!-- Grid Ends -->
 
 	<!-- footer -->
 
