--- a/CGHS/Search_Hospital.html
+++ b/CGHS/Search_Hospital.html
@@ -153,9 +153,9 @@
 				</div>
 
 				<div id="searchHospInfo">
-					<a href="https://cghs.gov.in/showfile.php?lid=5766" target="_blank">Click Here to see the complete list of Empanelled Hospital</a>
+					<a href="https://cghs.gov.in/showfile.php?lid=5766" target="_blank">Click Here to see the complete list of Empanelled Hospital <p id="matchCount"></p></a>
 					<!-- This para displays the total search match counts -->
-					<p id="matchCount"></p>
+					
 				</div>
 
 			</div>
