--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 					
 					<div class=" card card-tile text-center">
 						<img class="img-common img-med" src="images/medical.png">
-						<a href="medical_app.html" target="_blank" style="font-size: 0.9em;">Medical Bill App</a> 
+						<a href="medical_app.html" target="_blank" style="font-size: 0.9em; display:block;">Medical Bill App</a> 
 					</div>
 
 					<div class=" card card-tile text-center">
