--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
 					<div class=" card card-tile text-center">
 						<img class="img-common" src="images/tax.png">
-						<a href="IT_Calc/IT_calc.html" target="_blank" style="font-size: 0.9em;">Income Tax Calc</a> 
+						<a href="IT_Calc/IT_calc.html" target="_blank" style="font-size: 0.9em; display:block;">Income Tax Calc</a> 
 					</div>
 
 					<div class=" card card-tile text-center">
