CGHS Rate List search functionality
A functionality for searching through CGHS rates is added.

--- a/CGHS/Search_CGHS_Rate.html
+++ b/CGHS/Search_CGHS_Rate.html
@@ -7,10 +7,11 @@
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 	<link rel="stylesheet" type="text/css" href="../css/utilities.css">
 	<link rel="stylesheet" type="text/css" href="../css/Hosp_Search.css">
+	<link rel="stylesheet" type="text/css" href="../css/CGHS_Rate.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
 	<script type="text/javascript" src="../js/main.js"></script>
-	<script type="text/javascript" src="../js/HospitalListGlobal.js"></script>
-	<script type="text/javascript" src="../js/Hospital_Search.js"></script>
+	<script type="text/javascript" src="../js/Rate_List_Global.js"></script>
+	<script type="text/javascript" src="../js/CGHS_Rate_Search.js"></script>
 
 	<!-- <script type="text/javascript" src="main.js"></script> -->
 
@@ -84,8 +85,8 @@
 					<label class="sb-item-text" for="C">CGHS Guidelines</label>
 					<ul>
 						<li><a href="#">Important Rules</a></li>
-						<li><a href="CGHS/Search_CGHS_Rate.html" target="_blank">CGHS Rate List</a></li>
-						<li><a href="CGHS/Search_Hospital.html" target="_blank">Search Hospital</a></li>
+						<li><a href="Search_CGHS_Rate.html">CGHS Rate List</a></li>
+						<li><a href="Search_Hospital.html" target="_blank">Search Hospital</a></li>
 					</ul>
 					<!-- <h4 class="pl-2"></h5> -->
 				</div>
@@ -146,26 +147,26 @@
 			
 			<div class="searchInputMain">
 				
-				<div id="searchInputArea">
-					<h4 class="headingSH">List of CGHS empanelled Hospital/ Diagnostic Centre in Delhi-NCR (as on May, 2021)</h4>
-					<p class="contentSH">Enter the Hospital or Location Name in the Search Bar below</p>
-					<input type="text" id="search_Input" placeholder="Search for CGHS empanelled Hospital .." title="Type in a name">
+				<div id="rateSearchInput">
+					<h4 class="headingSH">List of CGHS approved rates of Treatment/ Investigation in Delhi-NCR (as on May, 2021)</h4>
+					<p class="contentSH">Enter the Investigation or Treament Name in the Search Bar below</p>
+					<input type="text" id="rate_search_Input" placeholder="Search for CGHS approved rates .." title="Type in a name">
 				</div>
 
-				<div id="searchHospInfo">
-					<a href="https://cghs.gov.in/showfile.php?lid=5766" target="_blank">Click Here to see the complete list of Empanelled Hospital <p id="matchCount"></p></a>
+				<div id="searchRateInfo">
+					<a href="https://cghs.gov.in/showfile.php?lid=3903" target="_blank">Click Here to see the complete list of Approved Rates</a>
 					<!-- This para displays the total search match counts -->
 					
 				</div>
 
 			</div>
 
-			<table id="table_Hospital">
+			<table id="table_Rate">
 				<thead>
-					<th>Name of the Hospital/ Diagnostic Centre</th>
-					<th>Address</th>
-					<th>Accreditation</th>
-					<th>Empanelled for</th>
+					<th id="sno_Rate">Sr. No.</th>
+					<th id="treatmentName">CGHS Treatment/ Investigation List</th>
+					<th id="rate_Non_NABH">Non- NABH /Non-NABL</th>
+					<th id="rate_NABH">NABH /NABL</th>
 				</thead>
 
 			</table>
@@ -246,8 +247,8 @@
 							<label class="sb-item-textHM" for="CHM">CGHS Guidelines</label>
 							<ul>
 								<li><a href="#">Important Rules</a></li>
-								<li><a href="CGHS/Search_CGHS_Rate.html">CGHS Rate List</a></li>
-								<li><a href="" onclick="javascript:window.location.reload();">Search Hospital</a></li>
+								<li><a href="" onclick="javascript:window.location.reload();">CGHS Rate List</a></li>
+								<li><a href="Search_Hospital.html">Search Hospital</a></li>
 							</ul>
 							<!-- <h4 class="pl-2"></h5> -->
 						</div>
@@ -310,7 +311,7 @@
 	
 	document.getElementById("hMenu").addEventListener("click",show_hMenu_Modal);
 
-	document.getElementById("search_Input").addEventListener("input",updateHospTable);
+	document.getElementById("rate_search_Input").addEventListener("input",updateRateTable);
 </script>
 
  </body>
