--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 					<ul>
 						<li><a href="#">Important Rules</a></li>
 						<li><a href="#">CGHS Rate List</a></li>
-						<li><a href="CGHS/Search_Hospital.html" target="_blank">Search Hospital</a></li>
+						<li><a href="CGHS/Search_CGHS_Rate.html" target="_blank">Search Hospital</a></li>
 					</ul>
 					<!-- <h4 class="pl-2"></h5> -->
 				</div>
@@ -176,7 +176,7 @@
 
 					<div class=" card card-tile text-center">
 						<img class="img-common" src="images/cghsratelist1.png">
-						<h4>CGHS Rate List</h4>
+						<a href="CGHS/Search_CGHS_Rate.html" target="_blank" style="display: block; font-size: 0.9em;">Search CGHS Rates</a>
 					</div>
 
 					<div class=" card card-tile text-center">
@@ -273,7 +273,7 @@
 							<label class="sb-item-textHM" for="CHM">CGHS Guidelines</label>
 							<ul>
 								<li><a href="#">Important Rules</a></li>
-								<li><a href="#">CGHS Rate List</a></li>
+								<li><a href="CGHS/Search_CGHS_Rate.html">CGHS Rate List</a></li>
 								<li><a href="CGHS/Search_Hospital.html" target="_blank" onclick="javascript:window.location.reload();">Search Hospital</a></li>
 							</ul>
 							<!-- <h4 class="pl-2"></h5> -->
