--- a/IT_Calc/IT_calc.html
+++ b/IT_Calc/IT_calc.html
@@ -86,7 +86,7 @@
 					<label class="sb-item-text" for="C">CGHS Guidelines</label>
 					<ul>
 						<li><a href="#">Important Rules</a></li>
-						<li><a href="#">CGHS Rate List</a></li>
+						<li><a href="../CGHS/Search_CGHS_Rate.html" target="_blank">CGHS Rate List</a></li>
 						<li><a href="../CGHS/Search_Hospital.html" target="_blank">Search Hospital</a></li>
 					</ul>
 					<!-- <h4 class="pl-2"></h5> -->
@@ -775,7 +775,7 @@
 							<label class="sb-item-textHM" for="CHM">CGHS Guidelines</label>
 							<ul>
 								<li><a href="#">Important Rules</a></li>
-								<li><a href="#">CGHS Rate List</a></li>
+								<li><a href="../CGHS/Search_CGHS_Rate.html">CGHS Rate List</a></li>
 								<li><a href="../CGHS/Search_Hospital.html">Search Hospital</a></li>
 							</ul>
 							<!-- <h4 class="pl-2"></h5> -->
