--- a/CGHS/Search_CGHS_Rate.html
+++ b/CGHS/Search_CGHS_Rate.html
@@ -149,7 +149,7 @@
 				
 				<div id="rateSearchInput">
 					<h4 class="headingSH">List of CGHS approved rates of Treatment/ Investigation in Delhi-NCR (as on May, 2021)</h4>
-					<p class="contentSH">Enter the Investigation or Treament Name in the Search Bar below</p>
+					<p class="contentSH">Enter the Investigation or Treatment Name in the Search Bar below</p>
 					<input type="text" id="rate_search_Input" placeholder="Search for CGHS approved rates .." title="Type in a name">
 				</div>
 
