Added LTC 80 Fare Functionality
Added LTC 80 Fare Search Functionality and fixed some broken links

--- a/CGHS/Search_CGHS_Rate.html
+++ b/CGHS/Search_CGHS_Rate.html
@@ -70,7 +70,7 @@
 					<label class="sb-item-text" for="B">LTC</label>
 					<ul>
 						<li><a href="#">Important Rules</a></li>
-						<li><a href="#">LTC Fare Table</a></li>
+						<li><a href="../LTC/LTC_fare_80.html">LTC 80 Fare</a></li>
 						<li><a href="#">Other Information</a></li>
 					</ul>
 					<!-- <h4 class="pl-2"></h5> -->
@@ -232,7 +232,7 @@
 							<label class="sb-item-textHM" for="BHM">LTC</label>
 							<ul>
 								<li><a href="#">Important Rules</a></li>
-								<li><a href="#">LTC Fare Table</a></li>
+								<li><a href="../LTC/LTC_fare_80.html">LTC 80 Fare</a></li>
 								<li><a href="#">Other Information</a></li>
 							</ul>
 							<!-- <h4 class="pl-2"></h5> -->
