--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 					<label class="sb-item-text" for="B">LTC</label>
 					<ul>
 						<li><a href="#">Important Rules</a></li>
-						<li><a href="#">LTC Fare Table</a></li>
+						<li><a href="LTC/LTC_fare_80.html">LTC 80 Fare</a></li>
 						<li><a href="#">Other Information</a></li>
 					</ul>
 					<!-- <h4 class="pl-2"></h5> -->
@@ -160,9 +160,9 @@
 						
 					</div>
 
-					<div class=" card card-tile text-center">
+					<div class=" card card-tile text-center" onclick="window.open('LTC/LTC_fare_80.html', '_blank');" style="cursor: pointer;">
 						<img class="img-common" src="images/ltcfare.png">
-						<h4>LTC Fare Table</h4>
+						<a href="LTC/LTC_fare_80.html" target="_blank" style="display: block; font-size: 0.9em;">LTC 80 Fare</a>
 					</div>
 
 					<div class=" card card-tile text-center">
@@ -183,7 +183,8 @@
 
 					<div class=" card card-tile text-center">
 						<img class="img-common" src="images/ltc.png">
-						<h4>LTC Fare Calc</h4>
+						
+						<h4>LTC Fare Table</h4>
 					</div>
 
 					<div class=" card card-tile text-center">
@@ -260,7 +261,7 @@
 							<label class="sb-item-textHM" for="BHM">LTC</label>
 							<ul>
 								<li><a href="#">Important Rules</a></li>
-								<li><a href="#">LTC Fare Table</a></li>
+								<li><a href="LTC/LTC_fare_80.html">LTC Fare Table</a></li>
 								<li><a href="#">Other Information</a></li>
 							</ul>
 							<!-- <h4 class="pl-2"></h5> -->
