--- a/IT_Calc/IT_calc.html
+++ b/IT_Calc/IT_calc.html
@@ -71,7 +71,7 @@
 					<label class="sb-item-text" for="B">LTC</label>
 					<ul>
 						<li><a href="#">Important Rules</a></li>
-						<li><a href="#">LTC Fare Table</a></li>
+						<li><a href="../LTC/LTC_fare_80.html" target="_blank">LTC 80 Fare</a></li>
 						<li><a href="#">Other Information</a></li>
 					</ul>
 					<!-- <h4 class="pl-2"></h5> -->
@@ -760,7 +760,7 @@
 							<label class="sb-item-textHM" for="BHM">LTC</label>
 							<ul>
 								<li><a href="#">Important Rules</a></li>
-								<li><a href="#">LTC Fare Table</a></li>
+								<li><a href="../LTC/LTC_fare_80.html">LTC 80 Fare</a></li>
 								<li><a href="#">Other Information</a></li>
 							</ul>
 							<!-- <h4 class="pl-2"></h5> -->
