--- a/LTC/LTC_fare_80.html
+++ b/LTC/LTC_fare_80.html
@@ -279,7 +279,7 @@
 							<label class="sb-item-textHM" for="CHM">CGHS Guidelines</label>
 							<ul>
 								<li><a href="#">Important Rules</a></li>
-								<li><a href="../CGHS/Search_CGHS_Rate.html">CGHS Rate List</a></li>
+								<li><a href="../CGHS/Search_CGHS.html">CGHS Rate List</a></li>
 								<li><a href="../CGHS/Search_Hospital.html">Search Hospital</a></li>
 							</ul>
 							<!-- <h4 class="pl-2"></h5> -->
@@ -352,7 +352,7 @@
 
 	document.getElementById("city_from_ltc").addEventListener("click",fill_From_Search);
 	document.getElementById("city_to_ltc").addEventListener("click",fill_To_Search);
-	document.getElementById("ltc_80_to_input").addEventListener("dblclick",showToCityDrop_dbl);
+	//document.getElementById("ltc_80_to_input").addEventListener("dblclick",showToCityDrop_dbl);
 	document.getElementById("ltc_80_to_input").addEventListener("focus",showToCityDrop_dbl);
 
 //This button event toggles the view of the full LTC 80 Fare table
