updated list of LTC Rates
updated list of LTC rates
In drop down some click target were div elements instead of li elements. An if block inserted to by pass the garbled text.

--- a/LTC/LTC_fare_80.html
+++ b/LTC/LTC_fare_80.html
@@ -178,8 +178,11 @@
 						
 						<th id="LTC_From">LTC From</th>
 						<th id="LTC_To">LTC To</th>
-						<th id="rate_Economy">HLTC (Economy Class)</th>
-						<th id="rate_Business">DLTC (Business Class)</th>
+						<th id="rate_Economy">HLTC (Economy Class) till Jul, 2021</th>
+						<th id="rate_Business">DLTC (Business Class) till Jul, 2021</th>
+
+						<th id="rate_Economy2">HLTC (Economy Class) Aug, 2021 - Apr, 2022</th>
+						<th id="rate_Business2">DLTC (Business Class) Aug, 2021 - Apr, 2022</th>
 					</thead>
 
 			</table>
@@ -197,8 +200,11 @@
 					<th id="sno_City_Full">Sr. No.</th>
 					<th id="LTC_From_Full">LTC From</th>
 					<th id="LTC_To_Full">LTC To</th>
-					<th id="rate_Economy_Full">HLTC (Economy Class)</th>
-					<th id="rate_Business_Full">DLTC (Business Class)</th>
+					<th id="rate_Economy_Full">HLTC (Economy Class) till July, 2021</th>
+					<th id="rate_Business_Full">DLTC (Business Class) till July, 2021</th>
+					<th id="rate_Economy_Full2">HLTC (Economy Class) Aug, 2021 - Apr, 2022</th>
+					<th id="rate_Business_Full2">DLTC (Business Class) Aug, 2021 - Apr, 2022</th>
+
 				</thead>
 
 			</table>
