--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 					<input type="checkbox" id="C"><i class="fas fa-hand-holding-medical"></i>
 					<label class="sb-item-text" for="C">CGHS Guidelines</label>
 					<ul>
-						<li><a href="#">Important Rules</a></li>
+						<li><a href="content-folder/cghs-important-rules.html">Important Rules</a></li>
 						<li><a href="#">CGHS Rate List</a></li>
 						<li><a href="CGHS/Search_CGHS_Rate.html" target="_blank">Search Hospital</a></li>
 					</ul>
