--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 							<input type="checkbox" id="CHM"><i class="fas fa-hand-holding-medical"></i>
 							<label class="sb-item-textHM" for="CHM">CGHS Guidelines</label>
 							<ul>
-								<li><a href="#">Important Rules</a></li>
+								<li><a href="/content-folder/cghs-important-rules.html">Important Rules</a></li>
 								<li><a href="CGHS/Search_CGHS_Rate.html">CGHS Rate List</a></li>
 								<li><a href="CGHS/Search_Hospital.html" target="_blank" onclick="javascript:window.location.reload();">Search Hospital</a></li>
 							</ul>
