Update 2 in cghs chapters
hamburger icon removed in phone view

--- a/content-folder/CGHS_Chapters/Entitlement.html
+++ b/content-folder/CGHS_Chapters/Entitlement.html
@@ -44,7 +44,7 @@
 
 		<div class="content-area m-1 p-1 ">
 
-			<i class="fas fa-bars" id="hMenu"></i>
+			<!-- <i class="fas fa-bars" id="hMenu"></i> -->
 
 			<!--------------------The Main Content Starts----------------------- -->
 			
