Emergency Treatment chapter added
Emergency Treatment chapter added

--- a/CGHS/Search_Hospital.html
+++ b/CGHS/Search_Hospital.html
@@ -56,7 +56,6 @@
 						<li><a href="../medical_app.html" target="_blank">Medical Bill App</a></li>
 						<li><a href="../IT_Calc/IT_calc.html" target="_blank">Income Tax Calculator</a></li>
 						<li><a href="../Widgets/Leave Encashment.html" target="_blank">Leave Encashment</a></li>
-
 						<li><a href="#">LTC fare Calculator</a></li>
 					</ul>
 					<!-- <h4 class="pl-2"></h5> -->
@@ -260,7 +259,7 @@
 							<label class="sb-item-textHM" for="CHM">CGHS Guidelines</label>
 							<ul>
 								<li><a href="#">Important Rules</a></li>
-								<li><a href="CGHS/Search_CGHS_Rate.html">CGHS Rate List</a></li>
+								<li><a href="Search_CGHS_Rate.html">CGHS Rate List</a></li>
 								<li><a href="" onclick="javascript:window.location.reload();">Search Hospital</a></li>
 							</ul>
 							<!-- <h4 class="pl-2"></h5> -->
