pay matrix table added
pay matrix table added

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
 					<div class=" card card-tile text-center" onclick="window.open('CGHS/Search_CGHS_Rate.html', '_blank');" style="cursor: pointer;">
 						<img class="img-common" src="images/cghsratelist1.png" >
-						<a href="#" style="display: block; font-size: 0.9em;">Search CGHS Rates</a>
+						<a style="display: block; font-size: 0.9em;">Search CGHS Rates</a>
 					</div>
 
 					<div class=" card card-tile text-center">
@@ -206,7 +206,7 @@
 
 					<div class=" card card-tile text-center" onclick="window.open('CGHS/Search_Hospital.html', '_blank');" style="cursor: pointer;">
 						<img class="img-common" src="images/hospital.png">
-						<a href="#" style="display: block; font-size: 0.9em;">Search Hospitals</a>
+						<a style="display: block; font-size: 0.9em;">Search Hospitals</a>
 					</div>
 
 				</div>
