--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 					<ul>
 						<li><a href="#">Important Rules</a></li>
 						<li><a href="#">MACP Guide</a></li>
-						<li><a href="#">Pay Matrix</a></li>
+						<li><a href="content-folder/payMatrix.html", target="_blank">Pay Matrix</a></li>
 						<li><a href="#">Other Info</a></li>
 					</ul>
 					<!-- <h4 class="pl-2"></h5> -->
@@ -177,7 +177,7 @@
 						<a href="#" style="display: block; font-size: 0.9em;">LTC 80 Fare</a>
 					</div>
 
-					<div class=" card card-tile text-center">
+					<div class=" card card-tile text-center" onclick="window.open('content-folder/payMatrix.html', '_blank');" style="cursor: pointer;">
 						<img class="img-common" src="images/paymatrix.png">
 
 						<h4>Pay Matrix</h4>
@@ -305,7 +305,7 @@
 							<ul>
 								<li><a href="#">Important Rules</a></li>
 								<li><a href="#">MACP Guide</a></li>
-								<li><a href="#">Pay Matrix</a></li>
+								<li><a href="content-folder/payMatrix.html", target="_blank">Pay Matrix</a></li>
 								<li><a href="#">Other Info</a></li>
 							</ul>
 							<!-- <h4 class="pl-2"></h5> -->
