Pay Matrix Select Drop Down added
Drop Down added to Pay Matrix

--- a/medical_app.html
+++ b/medical_app.html
@@ -128,7 +128,7 @@
 					<input type="checkbox" id="C"><i class="fas fa-hand-holding-medical"></i>
 					<label class="sb-item-text" for="C">CGHS Guidelines</label>
 					<ul>
-						<li><a href="#">Important Rules</a></li>
+						<li><a href="content-folder/cghs-important-rules.html">Important Rules</a></li>
 						<li><a href="CGHS/Search_CGHS_Rate.html" target="_blank">CGHS Rate List</a></li>
 						<li><a href="CGHS/Search_Hospital.html" target="_blank">Search Hospital</a></li>
 					</ul>
@@ -400,7 +400,7 @@
 							<input type="checkbox" id="CHM"><i class="fas fa-hand-holding-medical"></i>
 							<label class="sb-item-textHM" for="CHM">CGHS Guidelines</label>
 							<ul>
-								<li><a href="#">Important Rules</a></li>
+								<li><a href="content-folder/cghs-important-rules.html">Important Rules</a></li>
 								<li><a href="CGHS/Search_CGHS_Rate.html">CGHS Rate List</a></li>
 								<li><a href="CGHS/Search_Hospital.html">Search Hospital</a></li>
 							</ul>
