--- a/LTC/LTC_fare_80.html
+++ b/LTC/LTC_fare_80.html
@@ -85,7 +85,7 @@
 					<input type="checkbox" id="C"><i class="fas fa-hand-holding-medical"></i>
 					<label class="sb-item-text" for="C">CGHS Guidelines</label>
 					<ul>
-						<li><a href="#">Important Rules</a></li>
+						<li><a href="../content-folder/cghs-important-rules.html">Important Rules</a></li>
 						<li><a href="../CGHS/Search_CGHS_Rate.html">CGHS Rate List</a></li>
 						<li><a href="../CGHS/Search_Hospital.html" target="_blank">Search Hospital</a></li>
 					</ul>
@@ -297,7 +297,7 @@
 							<input type="checkbox" id="CHM"><i class="fas fa-hand-holding-medical"></i>
 							<label class="sb-item-textHM" for="CHM">CGHS Guidelines</label>
 							<ul>
-								<li><a href="#">Important Rules</a></li>
+								<li><a href="../content-folder/cghs-important-rules.html">Important Rules</a></li>
 								<li><a href="../CGHS/Search_CGHS.html">CGHS Rate List</a></li>
 								<li><a href="../CGHS/Search_Hospital.html">Search Hospital</a></li>
 							</ul>
