updated cghs list
updated cghs list

--- a/CGHS/Search_Hospital.html
+++ b/CGHS/Search_Hospital.html
@@ -159,13 +159,13 @@
 			<div class="searchInputMain">
 				
 				<div id="searchInputArea">
-					<h4 class="headingSH">List of CGHS empanelled Hospital/ Diagnostic Centre in Delhi-NCR (as on May, 2021)</h4>
+					<h4 class="headingSH">List of CGHS empanelled Hospital/ Diagnostic Centre in Delhi-NCR (as on May, 2022)</h4>
 					<p class="contentSH">Enter the Hospital or Location Name in the Search Bar below</p>
 					<input type="text" id="search_Input" placeholder="Search for CGHS empanelled Hospital .." title="Type in a name">
 				</div>
 
 				<div id="searchHospInfo">
-					<a href="https://cghs.gov.in/showfile.php?lid=5766" target="_blank">Click Here to see the complete list of Empanelled Hospital <p id="matchCount"></p></a>
+					<a href="https://cghs.gov.in/CghsGovIn/faces/ViewPage.xhtml?id=Mzg0OQ==" target="_blank">Click Here to see the complete list of Empanelled Hospital <p id="matchCount"></p></a>
 					<!-- This para displays the total search match counts -->
 					
 				</div>
